# control-summ

./: CMakeLists.txt  README.md  from_file.txt  main.cpp  t.txt  temp.txt
files/: cksum.ini  hello.txt  hello2.txt
